--- a/generator.html
+++ b/generator.html
@@ -1,8 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
-    "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
 <head>
 <title>Idea Generator</title>
 <meta name="author" content="Jake Wasdin" />
@@ -11,6 +7,9 @@
 </head>
 
 <body>
+<div id="generated">
+
+</div>
 
 </body>
 
