now generating from predefined arrays

--- a/generator.html
+++ b/generator.html
@@ -7,9 +7,15 @@
 </head>
 
 <body>
-<div id="generated">
-
-</div>
+	<div id="generated_fields">
+		<p>Name: <span id="Name"></span></p>
+		<p>Setting: <span id="Setting"></span></p>
+		<p>Motivation: <span id="Motivation"></span></p>
+	</div>
+	
+	<div id="selectors">
+		
+	</div>
 
 </body>
 
