--- a/generator.html
+++ b/generator.html
@@ -13,8 +13,45 @@
 		<p>Motivation: <span id="Motivation"></span></p>
 	</div>
 	
+	<p> &nbsp; </p>
+	
 	<div id="selectors">
-		
+		<table id="selector_table">
+			<tr>
+				<td>
+				<p>First names</p>
+				<select id="first_name_selection">
+					<option value="0">Top 50 first names in US, 2010</option>
+					<option value="1">Assorted</option>
+					<option value="99">User input</option>
+
+				</select>
+				<span id="first_names_input"></span>
+				<td>
+				<p>Last names</p>
+				<select id="last_name_selection">
+					<option value="0">Top 50 last names in US, 2010</option>
+					<option value="1">Assorted</option>
+					<option value="99">User input</option>
+				</select>
+				</td>
+				<td>
+				<p>Settings</p>
+				<select id="settings_selection">
+					<option value="0">Assorted</option>
+					<option value="99">User input</option>
+				</select>
+				</td>
+				<td>
+				<p>Motivations</p>
+				<select id="motivations_selection">
+					<option value="0">Assorted</option>
+					<option value="99">User input</option>
+				</select>
+				</td>
+				
+			</tr>
+		</table>
 	</div>
 
 </body>
