cleaning up code

--- a/generator.html
+++ b/generator.html
@@ -21,35 +21,32 @@
 				<td>
 				<p>First names</p>
 				<select id="first_name_selection">
-					<option value="0">Top 50 first names in US, 2010</option>
-					<option value="1">Assorted</option>
-					<option value="99">User input</option>
-
+					<option value="0">Top 50 baby in US, 2011</option>
 				</select>
 				<span id="first_names_input"></span>
 				<td>
 				<p>Last names</p>
 				<select id="last_name_selection">
 					<option value="0">Top 50 last names in US, 2010</option>
-					<option value="1">Assorted</option>
-					<option value="99">User input</option>
 				</select>
 				</td>
 				<td>
 				<p>Settings</p>
 				<select id="settings_selection">
 					<option value="0">Assorted</option>
-					<option value="99">User input</option>
 				</select>
 				</td>
 				<td>
 				<p>Motivations</p>
 				<select id="motivations_selection">
 					<option value="0">Assorted</option>
-					<option value="99">User input</option>
-				</select>
+				</select> 
 				</td>
-				
+			</tr>
+			<tr>
+				<td>
+						<button type="button" id="select" onclick="reload_selections()">Reload</button>
+				</td>
 			</tr>
 		</table>
 	</div>
