adding more name lists

--- a/generator.html
+++ b/generator.html
@@ -23,6 +23,9 @@
 				<p>First names</p>
 				<select id="first_name_selection" multiple="multiple">
 					<option value="0">Top 50 baby names in US, 2011</option>
+					<option value="1">Top 200 given names in US, 1915-2014</option>
+					<option value="2">Top 50 given names in China, 2007</option>
+					<option value="3">Top ~300 given names in France, 1900-2006</option>
 				</select>
 				<span id="first_names_input"></span>
 				<td>
@@ -31,6 +34,8 @@
 					<option value="0">Top 100 last names in US, 2000</option>					
 					<option value="1">Top 100 last names in Quebec, 2006</option>
 					<option value="2">Top 10 last names in Mexico, 2005</option>
+					<option value="3">Top 100 last names in Japan, 2008</option>
+					<option value="4">Top 20 last names in China, 2007</option>
 				</select>
 				</td>
 				<td>
